--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0",
     "twig": "^1.17.1"
   },
   "scripts": {
@@ -12,7 +13,6 @@
   "version": "1.0.0",
   "description": "\"\"",
   "main": "server.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
